Fix help text getting cut off

--- a/packages/loom-ui/src/renderer/Editor/ElementEditor/PropertiesEditor/PropertiesEditor.scss
+++ b/packages/loom-ui/src/renderer/Editor/ElementEditor/PropertiesEditor/PropertiesEditor.scss
@@ -5,7 +5,6 @@
   width: 200px;
   border-left: 1px solid $primary-5;
   border-top-left-radius: 8px;
-  overflow: hidden;
   display: flex;
   flex-flow: column nowrap;
 
@@ -108,5 +107,10 @@
 
   .keyvaluelist {
     flex-basis: 100%;
+  }
+
+  .help-icon {
+    font-size: 8px;
+    margin-left: 5px;
   }
 }
